--- a/style.css
+++ b/style.css
@@ -26,35 +26,17 @@ body {
 
 /* Navbar */
 nav {
-    display: flex;
     width: 100%;
     background-color: var(--verde-limao);
     color: white;
-    padding: 10px 20px;
-    align-items: center;
-    justify-content: space-between; /* Distribui os itens com espaço entre eles */
+    padding: 10px 0;
+    text-align: center;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    position: relative; /* Adicionado para garantir que o título seja posicionado corretamente */
 }
 
 nav h1 {
     margin: 0;
     font-size: 24px;
-    text-align: center;
-    position: absolute; /* Posiciona o título absolutamente */
-    left: 50%; /* Move o título para o meio */
-    transform: translateX(-50%); /* Centraliza o título */
-    white-space: nowrap; /* Evita que o título quebre em várias linhas */
-}
-
-nav button {
-    background: none;
-    border: none;
-    color: white;
-    cursor: pointer;
-    font-size: 16px;
-    padding: 5px 10px;
-    z-index: 1; /* Garante que o botão fique acima do título */
 }
 
 /* Container Principal */
@@ -179,7 +161,7 @@ nav button {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #ccc;
+    background-color: var(--branco);
     transition: 0.4s;
     border-radius: 25px;
 }
@@ -191,14 +173,14 @@ nav button {
     width: 17px;
     left: 4px;
     bottom: 4px;
-    background-color: white;
+    background-color: var(--verde-limao);
     transition: 0.4s;
     border-radius: 50%;
 }
 
 /* Quando o switch está ativado */
 input:checked + .slider {
-    background-color: var(--preto);
+    background-color: var(--off-white);
 }
 
 input:checked + .slider:before {
@@ -221,7 +203,21 @@ input:checked + .slider:before {
     transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
 }
 
-
+#feedback-button {
+    background: none;
+    border: none;
+    color: var(--verde-limao); /* Cor do texto */
+    cursor: pointer;
+    font-size: 16px;
+    padding: 10px 20px;
+    margin: 10px auto; /* Centraliza o botão */
+    display: block; /* Faz o botão ocupar a largura total */
+    text-align: center;
+    width: fit-content; /* Ajusta a largura ao conteúdo */
+    border-radius: 5px;
+    background-color: None; /* Fundo branco */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Sombra leve */
+}
 
 
 
